# LocPlaceBot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: binaries.yaml  ci-build.yaml  publish.yaml
locales/: en.yml  ru.yml
src/: commands.rs  config.rs  env.rs  handlers.rs  loc.rs  main.rs  metrics.rs  observability.rs  redis.rs  testutils.rs  utils.rs
src/eula/: en.html  en.md  mod.rs  ru.html  ru.md
src/handlers/: limiter.rs  limiter_test.rs  mod.rs  query.rs  senders.rs  test.rs
src/handlers/options/: callback.rs  consent.rs  location.rs  mod.rs
src/handlers/redis/: limiter.rs  limiter_test.rs  mod.rs
src/help/: en.html  en.md  mod.rs  ru.html  ru.md
src/loc/: cache.rs  cache_test.rs  google.rs  mod.rs  osm.rs  test.rs  yandex.rs
src/users/: cache.rs  mock.rs  mod.rs  uid.rs
