[package]
name = "loc-place-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot framework and localization library
teloxide = { version = "0.13.0", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler", "redis-storage"] }
rust-i18n = "3.1.2"
# Asynchronous runtime, web server, metrics
tokio = { version =  "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
axum = "0.7.7"
axum-prometheus = "0.7.0"
prometheus = "0.13.4"
hyper = "1.4.1"
# Logging
log = "0.4.22"
pretty_env_logger = "0.5.0"
# HTTP client with caching
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
http = "1.0.0"
http-cache = { version = "0.19.0", default-features = false }
http-cache-reqwest = { version = "0.14.0", default-features = false }
http-cache-semantics = "2.1.0"
mime = "0.3.17"
# Serialization / deserialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
# gRPC / protobuf stuff
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
prost-wkt-types = "0.6.0"
# Redis
redis = { version = "0.27.4", features = ["ahash", "tokio-comp", "connection-manager"] }
mobc = "0.8.4"
mobc-redis = "0.8.2"
# Derive macros
strum = "0.26.3"
strum_macros = "0.26.4"
derive_more = { version = "1.0.0", features = ["display", "from", "constructor", "error"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
# Other basic stuff
regex = "1.11.0"
chashmap = "2.2.2"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
sha256 = "1.5.0"
# Rust specific stuff
once_cell = "1.20.2"
futures = "0.3.31"
async-trait = "0.1.83"

[dev-dependencies]
testcontainers = "0.23.1"

[build-dependencies]
tonic-build = "0.12.3"
