[package]
name = "loc-place-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Telegram Bot framework and localization library
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler", "redis-storage"] }
rust-i18n = "3.1.5"
# Asynchronous runtime, web server, metrics
tokio = { version =  "1.50.0", default-features = false, features = ["rt-multi-thread", "macros"] }
axum = "0.8.8"
axum-prometheus = "0.10.0"
prometheus = "0.14.0"
hyper = "1.8.1"
# Logging and envs
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
axum-tracing-opentelemetry = "0.33.0"
dotenvy = "0.15.7"
# HTTP client with caching
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
reqwest-middleware = { version = "0.5.1", features = ["json"] }
http = "1.4.0"
http-cache = { version = "1.0.0-alpha.5", default-features = false, features = ["url-standard"] }
http-cache-reqwest = { version = "1.0.0-alpha.5", default-features = false }
http-cache-semantics = "3.0.0"
mime = "0.3.17"
# Serialization / deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
postcard = { version = "1", features = ["use-std"] }
# gRPC / protobuf stuff
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
prost-wkt-types = "0.7.1"
# Redis
mobc = "0.9.0"
mobc-redis = "0.9.0"
# Derive macros
strum = "0.28.0"
strum_macros = "0.28.0"
derive_more = { version = "2.1.1", features = ["display", "from", "constructor", "error"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
# Other basic stuff
regex = "1.12.3"
chashmap = "2.2.2"
uuid = { version = "1.22.0", features = ["v4", "fast-rng"] }
sha256 = "1.6.0"
urlencoding = "2.1.3"
# Rust specific stuff
once_cell = "1.21.4"
futures = "0.3.32"
async-trait = "0.1.89"

[dev-dependencies]
testcontainers = "0.27.1"
opentelemetry_sdk = { version = "0.31.0", features = ["testing"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
